연휴가 월말에 있을경우 에러 bug fix

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
     android:orientation="vertical"
     android:weightSum="60"
     android:background="#666"
-    tools:context=".MainActivity">
+    tools:context="cal.sonar2.tistory.com.MainActivity">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
